extensions/shipping/UPS Shipping/objects/Internal_Shipping_Rate__mdt/Internal_Shipping_Rate__mdt.object-meta.xml
<CustomObject>
    <label>Internal Shipping Rate</label>
    <pluralLabel>Internal Shipping Rates</pluralLabel>
</CustomObject>