extensions/shipping/UPS Shipping/objects/Internal_Shipping_Rate__mdt/fields/Cart_Max_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cart_Max_Weight__c</fullName>
    <label>Cart Max Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>