extensions/shipping/UPS Shipping/objects/Internal_Shipping_Rate__mdt/fields/Cart_Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Cart_Min_Price__c</fullName>
    <label>Cart Min Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>