extensions/shipping/UPS Shipping/objects/Internal_Shipping_Rate__mdt/fields/Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider__c</fullName>
    <label>Shipping Provider</label>
    <referenceTo>Shipping_Provider__mdt</referenceTo>
    <relationshipLabel>Internal Shipping Rates</relationshipLabel>
    <relationshipName>Internal_Shipping_Rates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>